sniphub-back/00_init.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sniphub
  labels:
    istio-injection: enabled
---
