sniphub-back/02_nest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sniphub-back
  namespace: sniphub
spec:
  selector:
    matchLabels:
      app: sniphub-back
  replicas: 3
  template:
    metadata:
      labels:
        app: sniphub-back
        namespace: sniphub
    spec:
      containers:
        - name: sniphub-back
          image: registry.digitalocean.com/docker-cours/sniphub-back:main-21c1b60fff068ff350f5b5f7bcba1fa8b01012db
          ports:
            - containerPort: 4000
              name: http
