sniphub-back/01-networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sniphub-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'sniphub.darmanin.info'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - 'sniphub.darmanin.info'
    tls:
      mode: SIMPLE
      credentialName: sniphub-cert-production
