sniphub-back/03_nest_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sniphub-back
  namespace: sniphub
spec:
  selector:
    app: sniphub-back
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sniphub-back
  namespace: sniphub
spec:
  hosts:
  - "sniphub.darmanin.info"
  gateways:
  - sniphub-gateway
  http:
  - match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: sniphub-back
        port:
          number: 3000
---
